# raylib-entt-mp-template

./: CMakeLists.txt  README.md  build.bat  build.sh  run_cl.bat  run_cl.sh  run_sv.bat  run_sv.sh
client/: CMakeLists.txt
client/include/: Components.hpp
client/include/core/: Client.hpp  NetContext.hpp  WorldContext.hpp
client/include/systems/: ConnText.hpp  Input.hpp  Interp.hpp  Movement.hpp  Network.hpp  Render.hpp
client/src/core/: Client.cpp  PacketHandlers.cpp
client/src/systems/: ConnText.cpp  Draw2D.cpp  Draw3D.cpp  Input.cpp  Interp.cpp  Movement.cpp  Network.cpp  Render.cpp  Tick.cpp
server/: CMakeLists.txt
server/include/: Components.hpp
server/include/core/: NetContext.hpp  Server.hpp  WorldContext.hpp
server/src/: main.cpp
server/src/core/: PacketHandlers.cpp  Server.cpp
server/src/systems/: Movement.cpp  Network.cpp  Tick.cpp
shared/: CMakeLists.txt
shared/include/shared/: Components.hpp  Movement.hpp  Net.hpp  Packets.hpp
